--- a/new.html
+++ b/new.html
@@ -10,6 +10,11 @@
 
 
         <style>
+
+
+    body {
+        background-color: black;
+    }        
     .navbar {
         padding-top: 15px;
         padding-bottom: 15px;
@@ -22,7 +27,7 @@
 
 
   .navbar-nav  li a:hover {
-    color: #1abc9c !important;
+    color: #eca710 !important;
                 }
         
         </style> 
